--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -173,12 +173,10 @@ scrape_configs:
         action: replace
         target_label: namespace
 
-      # Extract the "<cluster>-<node-pool>" name from the GKE node name.
+      # Add the GKE node name.
       - source_labels: [__meta_kubernetes_pod_node_name]
         action: replace
-        regex: gke-(.*)(-[^-]+){2}
-        replacement: $1
-        target_label: cluster
+        target_label: node
 
       # Identify the deployment name of a pod or daemon set. This requires two
       # steps. Two steps are necessary to handle both daemon set pod names and
@@ -197,10 +195,10 @@ scrape_configs:
       # Step 2: Remove the trailing pod_template_hash if present.
       # In the case of a daemon set that does not have the trailing hash, the
       # regex will not match and deployment remains unchanged.
-      #   e.g. prometheus-server-3165440997
+      #   e.g. prometheus-server-3165fc0997
       - source_labels: [deployment]
         action: replace
-        regex: (.*)(-[0-9]+)
+        regex: (.*)(-[0-9a-f]+)
         replacement: $1
         target_label: deployment
 
@@ -340,12 +338,23 @@ scrape_configs:
 
   # Blackbox configurations.
   #
-  # Scrape the blackbox_exporter instance running in the cluster for service
-  # metrics.
+  # Check the blackbox-service for availability.
+  #
+  # NOTE: The blackbox-service load balances across multiple instances. Metrics
+  # read from this target will randomly be from either one. Since that is not
+  # helpful, we drop them all. Instead we rely on pod service discovery to
+  # monitor the individual blackbox instances. And, we keep this target for
+  # alerting on the availabliity of at least one.
   - job_name: 'blackbox-exporter-ipv4'
     static_configs:
       - targets:
         - blackbox-service.default.svc.cluster.local:9115
+    metric_relabel_configs:
+      # Drop all metrics. Automatic metrics like `up` are unaffected.
+      - source_labels: [__name__]
+        regex: .*
+        action: drop
+
 
 
   # Each blackbox configuration uses a different probe (tcp, icmp, http, etc).
