Scrape the github receiver

--- a/k8s/prometheus-federation/deployments/github-receiver.yml
+++ b/k8s/prometheus-federation/deployments/github-receiver.yml
@@ -12,8 +12,7 @@ spec:
       labels:
         run: github-receiver
       annotations:
-        # TODO(soltesz): add prometheus metrics to this daemon.
-        prometheus.io/scrape: 'false'
+        prometheus.io/scrape: 'true'
     spec:
       containers:
       - name: github-receiver
