--- a/k8s/prometheus-federation/deployments/kube-state-metrics.yml
+++ b/k8s/prometheus-federation/deployments/kube-state-metrics.yml
@@ -7,15 +7,19 @@ spec:
   template:
     metadata:
       labels:
-        application: kube-state-metrics
-        version: "v0.5.0"
+        run: kube-state-metrics
       annotations:
-        prometheus.io/scrape: 'true'
+        prometheus.io/scrape: 'false'
     spec:
       nodeSelector:
         prometheus-node: 'true'
       containers:
       - name: kube-state-metrics
-        image: gcr.io/google_containers/kube-state-metrics:v0.5.0
+        # image: gcr.io/google_containers/kube-state-metrics:v0.5.0
+        image: quay.io/coreos/kube-state-metrics:v1.3.1
+        args: [
+          "--collectors=deployments,nodes,pods,services",
+          "--port=8080",
+        ]
         ports:
         - containerPort: 8080
