--- a/k8s/prometheus-federation/services/kube-state-metrics-service.yml
+++ b/k8s/prometheus-federation/services/kube-state-metrics-service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    prometheus.io/scrape: 'true'
+    prometheus.io/scrape: 'false'
   name: kube-state-metrics-service
   namespace: default
 spec:
