--- a/k8s/prometheus-federation/deployments/kube-state-metrics.yml
+++ b/k8s/prometheus-federation/deployments/kube-state-metrics.yml
@@ -9,6 +9,7 @@ spec:
       labels:
         run: kube-state-metrics
       annotations:
+        # Note: Do not enable service-discovery scraping.
         prometheus.io/scrape: 'false'
     spec:
       nodeSelector:
