--- a/k8s/prometheus-federation/services/kube-state-metrics-service.yml
+++ b/k8s/prometheus-federation/services/kube-state-metrics-service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
+    # Note: Do not enable service-discovery scraping. Use static configs.
     prometheus.io/scrape: 'false'
   name: kube-state-metrics-service
   namespace: default
