--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -490,8 +490,8 @@ scrape_configs:
   - job_name: 'snmp-exporter'
     static_configs:
       - targets:
-        - snmp-exporter.{{PROJECT}}.measurementlab.net:9116
-        - snmp-exporter.{{PROJECT}}.measurementlab.net:9100
+        - snmp-exporter.c.{{PROJECT}}.internal:9116
+        - snmp-exporter.c.{{PROJECT}}.internal:9100
 
 
   # SNMP configurations.
@@ -530,7 +530,7 @@ scrape_configs:
       - source_labels: [__exporter_project]
         regex: (.*)
         target_label: __address__
-        replacement: snmp-exporter.${1}.measurementlab.net:9116
+        replacement: snmp-exporter.c.{{PROJECT}}.internal:9116
 
     # This relabel config is the last relabel processed before ingesting data
     # into the datastore.
