--- a/k8s/prometheus-federation/deployments/alertmanager.yml
+++ b/k8s/prometheus-federation/deployments/alertmanager.yml
@@ -60,6 +60,29 @@ spec:
         - mountPath: /etc/alertmanager
           name: alertmanager-config
 
+      # Check https://hub.docker.com/r/jimmidyson/configmap-reload/tags/ for the current
+      # stable version.
+      - image: jimmidyson/configmap-reload:v0.2.2
+        name: configmap-reload
+        args: ["-webhook-url", "$(ALERTMGR_RELOAD_URL)", "-volume-dir", "/alertmanager-config"]
+        env:
+        - name: ALERTMGR_RELOAD_URL
+          valueFrom:
+            configMapKeyRef:
+              name: configmap-reload-urls
+              key: alertmanager_reload_url
+        resources:
+          requests:
+            memory: "400Mi"
+            cpu: "200m"
+          limits:
+            memory: "400Mi"
+            cpu: "200m"
+        volumeMounts:
+        # Mount the prometheus config volume so we can watch it for changes.
+        - mountPath: /alertmanager-config
+          name: alertmanager-config
+
       # Disks created manually, can be named here explicitly using
       # gcePersistentDisk instead of the persistentVolumeClaim.
       volumes:
