--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -71,20 +71,22 @@ inhibit_rules:
 
 # Various other checks rely on the script-exporter being up. If the
 # script-exporter is not up, then don't alert on those dependencies.
+# The empty `equal` parameter tells AM to not attempt a match on any other
+# labels i.e., `source_match` and `target_match_re` are sufficient.
 - source_match:
-  - alertname: 'ScriptExporterDownOrMissing'
-  target_match:
-  - alertname: 'ScriptExporterMissingMetrics'
-  - alertname: 'TooManyNdtServersDown'
+    alertname: 'ScriptExporterDownOrMissing'
+  target_match_re:
+    alertname: 'ScriptExporterMissingMetrics|TooManyNdtServersDown'
   equal: []
 
 # Don't alert on missing SNMP metrics or SNMP scraping being broken if the
-# snmp-exporter is down.
+# snmp-exporter is down. The empty `equal` parameter tells AM to not attempt a
+# match on any other labels i.e., `source_match` and `target_match_re` are
+# sufficient.
 - source_match:
-  - alertname: 'SnmpExporterDownOrMissing'
-  target_match:
-  - alertname: 'SnmpExporterMissingMetrics'
-  - alertname: 'SnmpScrapingDownAtSite'
+    alertname: 'SnmpExporterDownOrMissing'
+  target_match_re:
+    alertname: 'SnmpExporterMissingMetrics|SnmpScrapingDownAtSite'
   equal: []
 
 receivers:
