--- a/config/federation/prometheus/rules.yml
+++ b/config/federation/prometheus/rules.yml
@@ -204,3 +204,12 @@ candidate_machine:node_disk_io_time_ratio:gt_50_pct =
 
 candidate_ndt:vdlimit_used_12h_prediction:gt_50gb =
     ndt:vdlimit_used:predict_linear3h_12h > bool 50000000
+
+
+## Parser volume checks.
+#
+# This rule optimizes the alert query used for ParserDailyVolumeTooLow. Rather
+# than calculate multi-day values continuously, this rule will maintain a history
+# of the precalculated value needed by the rule.
+candidate_service:etl_test_count:increase24h =
+    sum by(service) (increase(etl_test_count{service!~".*batch.*", status="ok"}[24h]))
