--- a/k8s/prometheus-federation/mlab-oti.yml
+++ b/k8s/prometheus-federation/mlab-oti.yml
@@ -1,7 +1,8 @@
 # Configuration values for mlab-oti
 
 GCLOUD_PROJECT: mlab-oti
-PROMETHEUS_RAM: 18Gi
+PROMETHEUS_HEAP_SIZE: 18000000000
+PROMETHEUS_RAM: 25Gi
 PROMETHEUS_CPU: 6000m
 PROMETHEUS_VOLUME_SIZE: 400Gi
 EXTERNAL_IP: 35.184.81.106
