--- a/k8s/data-processing-cluster/deployments/prometheus.yml
+++ b/k8s/data-processing-cluster/deployments/prometheus.yml
@@ -53,7 +53,7 @@ spec:
         # value results in a configuration error.
         name: prometheus
         # Use 10x the default values for all index cache flags:
-        args: ["-config.file=/etc/prometheus/prometheus.yml"]
+        args: ["--config.file=/etc/prometheus/prometheus.yml"]
         ports:
           - containerPort: 9090
         resources:
