Adds a new k8s deployment, service and ingress for the GitHub Maintenance Exporter.

--- a/k8s/prometheus-federation/persistentvolumes/persistent-volumes.yml
+++ b/k8s/prometheus-federation/persistentvolumes/persistent-volumes.yml
@@ -36,3 +36,16 @@ spec:
   resources:
     requests:
       storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: auto-gmx-disk0
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "slow"
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
