--- a/k8s/prometheus-federation/deployments/gmx.yml
+++ b/k8s/prometheus-federation/deployments/gmx.yml
@@ -31,6 +31,7 @@ spec:
             secretKeyRef:
               name: gmx-webhook-secret
               key: gmx-webhook-secret
+        imagePullPolicy: Always
         ports:
         - containerPort: 9999
         resources:
