--- a/k8s/prometheus-federation/deployments/gmx.yml
+++ b/k8s/prometheus-federation/deployments/gmx.yml
@@ -25,6 +25,7 @@ spec:
       containers:
       - image: measurementlab/github-maintenance-exporter:v0.1
         name: gmx-server
+        args: ["--storage.state-file=/var/lib/gmx/gmx-state"]
         env:
         - name: GITHUB_WEBHOOK_SECRET
           valueFrom:
