--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -14,7 +14,7 @@ global:
 # Load rules once and periodically evaluate them according to the global
 # 'evaluation_interval'.
 rule_files:
-  - /etc/prometheus/rules.yml
+#  - /etc/prometheus/rules.yml
   - /etc/prometheus/alerts.yml
 
 # Scrape configurations.
