--- a/k8s/prometheus-federation/deployments/kube-lego.yml
+++ b/k8s/prometheus-federation/deployments/kube-lego.yml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: kube-lego
-  namespace: kube-lego
+  namespace: default
 spec:
   replicas: 1
   template:
