--- a/k8s/prometheus-federation/roles/rbac-external-dns.yml
+++ b/k8s/prometheus-federation/roles/rbac-external-dns.yml
@@ -1,9 +1,3 @@
-# Create a namespace for external-dns and its attendant services.
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: external-dns
----
 # A ClusterRole allowing external-dns to watch for new services and ingresses
 # with domains to add to the zone.
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -33,7 +27,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: external-dns
-  namespace: external-dns
+  namespace: default
 ---
 # Binding the external-dns ClusterRole to the ServiceAccount above.
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -47,4 +41,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: external-dns
-  namespace: external-dns
+  namespace: default
