--- a/k8s/prometheus-federation/roles/rbac-kube-lego.yml
+++ b/k8s/prometheus-federation/roles/rbac-kube-lego.yml
@@ -1,9 +1,3 @@
-# Create a namespace for kube-lego and its attendant services.
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: kube-lego
----
 # ClusterRole for kube-lego, which watches for properly annotated services and 
 # automatically generates TLS certificates for them via LetsEncrypt, then 
 # configures an ingress for them with those certificates.
@@ -55,7 +49,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: kube-lego
-  namespace: kube-lego
+  namespace: default
 ---
 # Bind the kube-lego ServiceAccount to the ClusterRole above.
 apiVersion: rbac.authorization.k8s.io/v1beta1
@@ -69,4 +63,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: kube-lego
-    namespace: kube-lego
+    namespace: default
