--- a/k8s/prometheus-federation/services/nginx.yml
+++ b/k8s/prometheus-federation/services/nginx.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: default-http-backend
-  namespace: nginx-ingress
+  namespace: default
 spec:
   ports:
   - port: 80
@@ -15,7 +15,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-lb
-  namespace: nginx-ingress
+  namespace: default
   labels:
     app: nginx-lb
 spec:
